Fixed overflow

--- a/src/app/layout/main/main.component.scss
+++ b/src/app/layout/main/main.component.scss
@@ -99,4 +99,5 @@ nav {
 
 main {
   flex-grow: 1;
+  overflow-y: scroll;
 }
